# Azure-Sphere

./: LICENSE  README.md
Azure IoT Hub/Device Twins/: README.md
Azure IoT Hub/Device Twins/Device Twins/: CMakeLists.txt  app_manifest.json  main.c
Azure IoT Hub/Direct Method/: README.md
Azure IoT Hub/Direct Method/Device/FanController/: CMakeLists.txt  app_manifest.json  main.c
Azure IoT Hub/Direct Method/Device/FanController/HardwareDefinitions/mt3620_rdb/: template_appliance.json
Azure IoT Hub/Direct Method/Device/FanController/HardwareDefinitions/mt3620_rdb/inc/hw/: template_appliance.h
Azure IoT Hub/FileUpload/FileUpload/FileUpload/: CMakeLists.txt  app_manifest.json  main.c
Azure IoT Hub/IoTCentral/: RefrigeratedTruck.json
Azure IoT Hub/SimpleStreamAnalytics/: README.md  main.c
Azure IoT Hub/SimpleStreamAnalytics/SimpleStreamAnalytics/: CMakeLists.txt  app_manifest.json  main.c
Azure IoT Hub/SimpleStreamAnalytics/SimpleStreamAnalytics/Hardware/: hardware_definition.json
Azure IoT Hub/Telemetry Communication/: README.md
Azure IoT Hub/Telemetry Communication/Telemetry Communication/: CMakeLists.txt  app_manifest.json
Azure IoT Hub/Telemetry Communication/Telemetry Communication/Telemetry Communication/: main.c
Azure IoT Hub/Time Series Insights/: CMakeLists.txt  README.md  main.c
Azure IoT Hub/Time Series Insights/Hardware/: hardware_definition.json
Azure IoT Hub/Time Series Insights/Hardware/inc/hw/: hardware_definition.h
Azure IoT Hub/Time Series Insights/Time Series Insights/: CMakeLists.txt  app_manifest.json  main.c
Azure IoT Hub/Time Series Insights/Time Series Insights/filter/: filter.c
Azure IoT Hub/Time Series Insights/filter/: filter.h
examples/: README.md
examples/ADC/: README.md
examples/ADC/AzureSphere Simple ADC/: CMakeLists.txt  main.c
examples/AzureSphere MQTT/AzureSphere MQTT/: CMakeLists.txt  app_manifest.json  main.c
examples/AzureSphere MQTT/AzureSphere MQTT/Eclipse Paho C/lib/: paho-mqtt3a-static.lib  paho-mqtt3a.lib  paho-mqtt3c-static.lib  paho-mqtt3c.lib
examples/AzureSphere Simple ADC/AzureSphere Simple ADC/: app_manifest.json
examples/AzureSphere Simple ADC/AzureSphere Simple ADC/Hardware/: hardware_definition.json
examples/AzureSphereBlink/AzureSphereBlink/: main.c
examples/AzureSphereSimple ADC/AzureSphereSimple ADC/: CMakeLists.txt  main.c
examples/Blink_LED/: README.md
examples/Blink_LED/AzureSphereBlink/: CMakeLists.txt  app_manifest.json  main.c
examples/Blink_LED/AzureSphereBlink/HardwareDefinitions/avnet_mt3620_sk/: template_appliance.json
examples/Blink_LED/AzureSphereBlink/HardwareDefinitions/mt3620_rdb/: template_appliance.json
examples/EventLoop/: README.md
examples/EventLoop/AzureSphere EventLoop/: CMakeLists.txt  app_manifest.json  main.c
examples/FileUpload/FileUpload/: CMakeLists.txt  app_manifest.json  main.c
examples/HTTP/: README.md
examples/HTTP/AzureSphereHTTP/: CMakeLists.txt  app_manifest.json  main.c
examples/HTTP/AzureSphereHTTP/json/: parson.c
examples/I2C/AzureSphere BMP280/: CMakeLists.txt  app_manifest.json  main.c
examples/I2C/AzureSphere BMP280/Hardware/: hardware_definition.json
examples/IoT Hub/: README.md
examples/IoT Hub/AzureSphere IoT Hub/: main.c
examples/IoT_Hub/: README.md
examples/IoT_Hub/AzureSphere IoT Hub/AzureSphere IoT Hub/: CMakeLists.txt  app_manifest.json
examples/MQTT/: README.md
examples/MQTT/AzureSphereMQTT/: CMakeLists.txt  app_manifest.json  main.c
examples/PWM/AzureSphere PWM/: CMakeLists.txt  README.md  main.c
examples/PWM/AzureSphere PWM/AzureSphere PWM/: app_manifest.json
examples/PWM/AzureSphere PWM/Hardware/inc/hw/: pwm_definition.h
examples/Simple_ADC/: README.md
examples/Simple_ADC/AzureSphere Simple ADC/: CMakeLists.txt  main.c
examples/StorageIO/: README.md
examples/StorageIO/AzureSphereStorageIO/: CMakeLists.txt  app_manifest.json  main.c
examples/TCP/: README.md
examples/TCP/AzureSphereTCP/: CMakeLists.txt  app_manifest.json  main.c
examples/UDP/: README.md
examples/UDP/AzureSphereUDP/: CMakeLists.txt  main.c
examples/UDP/AzureSphereUDP/AzureSphereUDP/: app_manifest.json
examples/wolfMQTT/: README.md
examples/wolfMQTT/AzureSphere wolfMQTT/: CMakeLists.txt  app_manifest.json  main.c
examples/wolfMQTT/AzureSphere wolfMQTT/wolfmqtt/src/: mqtt_client.c  mqtt_packet.c  mqtt_socket.c
examples/wolfMQTT/AzureSphere wolfMQTT/wolfmqtt/wolfmqtt/: mqtt_client.h  mqtt_packet.h  mqtt_socket.h  mqtt_types.h
(+4 files in other folders)
